# nur-public

./: .gitignore  ARCHITECTURE.md  COMPLIANCE.md  CONTRIBUTING.md  DATA_LICENSE.md  PROTOCOL.md  README.md  THREAT_MODEL.md  pyproject.toml  ruff.toml
data/: MANIFEST.json
data/feeds/: abuseipdb.json
demo/: .gitignore  apt28_campaign.stix.json  attack_map_example.json  demo.sh  eval_example.json  ioc_example.json  record-demo.py  scrape_real_intel.py  seed_and_serve.sh  trustless_demo.py
demo/mock-dashboard/: README.md  billing.html  detections.html  index.html  integrations.html  modules.html  nav.js  styles.css
demo/seed/: attack_map_01.json  attack_map_02.json  attack_map_03.json  attack_map_04.json  cisa_kev_reference.json  ioc_bundle_01.json  ioc_bundle_02.json  ioc_bundle_03.json  ioc_bundle_04.json  ioc_bundle_05.json  ioc_bundle_06.json  ioc_bundle_07.json  ioc_bundle_08.json  ioc_bundle_09.json  ioc_bundle_10.json  ioc_bundle_11.json
extension/: anonymize.js  background.js  compare.js  content.js  crawler.js  fingerprint.js  manifest.json  options.html  options.js  popup.html  popup.js  styles.css
nur/: __init__.py  anonymize.py  audit.py  behavioral_dp.py  cli.py  client.py  credibility.py  deidentify.py  dp.py  extract.py  intelligence.py  keystore.py  models.py  psi.py  review.py  sec_breach.py  secagg.py  threat_model.py  vendor_metadata.py  vendors.py  vendors_extra.py  verticals.py
nur/attest/: __init__.py  pipeline.py  verify.py
nur/feeds/: hhs_breach.py  soc2_subprocessors.py
nur/fl/: __init__.py  client.py  protocol.py  server.py
(+28 files in other folders)
