[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nur"
version = "0.1.0"
description = "Peer-verified security intelligence — client library and CLI"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.scripts]
nur = "nur.cli:main"

[project.optional-dependencies]
pdf = ["pypdf>=4.0"]
stix = ["stix2>=3.0"]
